Fix JWT expiration error and update Railway deployment configuration